Fix bottomw white space bug

--- a/src/Css/Dropdown.css
+++ b/src/Css/Dropdown.css
@@ -9,6 +9,7 @@
 
 html {
   font-size: 62.5%;
+  background-color: #22262B;
 }
 
 body {
