--- a/src/Sass/MovieDetails.scss
+++ b/src/Sass/MovieDetails.scss
@@ -9,7 +9,7 @@
   @include pageMargins;
   margin-right: 0;
   background-color: $dark-grey;
-  height: 60vh;
+  height: 65vh;
 }
 
 .backdrop-container {
@@ -31,7 +31,7 @@
 .overlay {
   position: relative;
   z-index: 2;
-  height: 63vh;
+  height: 67vh;
   width: 100%;
   background: -moz-linear-gradient(left,  rgba(34,38,43,1) 36%, rgba(125,185,232,0) 100%);
   background: -webkit-linear-gradient(left,  rgba(34,38,43,1) 36%,rgba(125,185,232,0) 100%);
@@ -115,11 +115,11 @@
   }
 
   .movie-details-section {
-    height: 40vh;
+    height: 48vh;
   }
 
   .overlay {
-    height: 41vh;
+    height: 50vh;
   }
 
   .movie-words-container {
@@ -137,11 +137,11 @@
   }
 
   .movie-details-section {
-    height: 38.5vh;
+    height: 40vh;
   }
 
   .overlay {
-    height: 38.5vh;
+    height: 44.5vh;
   }
 
   .movie-words-container {
@@ -226,17 +226,14 @@
     .movie-words__title {
       font-size: 20px;
     }
-
   }
 }
 
 @media screen and (max-width: 315px) {
   .backdrop {
-    min-width: 250px;
+    min-width: 0px;
   }
-
     .overview {
       font-size: 11px;
-
   }
 }
